--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,4 +2,4 @@
 # the repo. Unless a later match takes precedence,
 # users here will be requested for
 # review when someone opens a pull request.
-*       @lkwatson @nampham148 @mhendrick98
+*       @lkwatson @nampham148 @mhendrick98 @bianca-sparxs
