--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
         "axios": "^0.18.0",
         "babel-core": "^6.26.0",
         "babel-eslint": "^8.2.2",
+        "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-es2015": "^6.24.0",
         "babel-preset-node6": "^11.0.0",
         "del": "^3.0.0",
