--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.10.1",
     "jade": "^1.9.1",
     "mocha": "~1.14.0",
+    "moment": "^2.22.2",
     "mongoose": "^4.4.1",
     "morgan": "^1.5.1",
     "nodemon": "^1.18.4",
