--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jade": "^1.9.1",
     "mocha": "~1.14.0",
     "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "mongoose": "^4.4.1",
     "morgan": "^1.5.1",
     "nodemon": "^1.18.4",
